--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
+    
+
+		<link rel="stylesheet" href="css/style.css">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hangman</title>
   </head>
 
 <body>
+	<div id="wrapper">
+		<h2 id="title">Hangman</h2>
+		<h3 id="movies">Movies</h3>
+		<p id="display"></p>
+		<p id="score">Number of guesses: </p>
+		<p id="letters">Letters you've already guessed: </p>
+		<p id="lettersTyped"></p>
+	</div>
 
-	<h2>Hangman</h2>
-	<h3>Movies</h3>
-	<p id="movieLetters"></p>
-	<p id="score"></p>
-	<p>Letters you've already guessed: </p>
-	<p id="lettersTyped"></p>
-	
-
-	<script type="text/javascript" src="javascript/game.js"></script>
+	<script type="text/javascript" src="javascript/code.js"></script>
 
 </body>
 
