--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<h2 id="title">Hangman</h2>
 		<h3 id="movies">Movies</h3>
 		<p id="display"></p>
-		<p id="score">Number of guesses: </p>
+		<p id="score"></p>
 		<p id="letters">Letters you've already guessed: </p>
 		<p id="lettersTyped"></p>
 	</div>
